crates/uitest/fixtures/ty_check/method_selection/inherent_impl_ill_formed_receiver.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/method_selection/inherent_impl_ill_formed_receiver.fe
---
error[6-0003]: trait bound is not satisfied
   ┌─ inherent_impl_ill_formed_receiver.fe:17:24
   │
17 │ fn bad_param<T>(cache: Cache<T>) {
   │                        ^^^^^^^^ `T` doesn't implement `Hashable`

error[6-0003]: trait bound is not satisfied
   ┌─ inherent_impl_ill_formed_receiver.fe:18:11
   │
13 │ impl<T: Hashable> Cache<T> {
   │         -------- required by this bound on `touch`
   ·
18 │     cache.touch()
   │           ^^^^^ `T` doesn't implement `Hashable`

error[6-0003]: trait bound is not satisfied
   ┌─ inherent_impl_ill_formed_receiver.fe:18:11
   │
18 │     cache.touch()
   │           ^^^^^ `T` doesn't implement `Hashable`

error[6-0003]: trait bound is not satisfied
   ┌─ inherent_impl_ill_formed_receiver.fe:22:16
   │
22 │     let cache: Cache<T>
   │                ^^^^^^^^ `T` doesn't implement `Hashable`

error[6-0003]: trait bound is not satisfied
   ┌─ inherent_impl_ill_formed_receiver.fe:23:11
   │
13 │ impl<T: Hashable> Cache<T> {
   │         -------- required by this bound on `touch`
   ·
23 │     cache.touch()
   │           ^^^^^ `T` doesn't implement `Hashable`

error[6-0003]: trait bound is not satisfied
   ┌─ inherent_impl_ill_formed_receiver.fe:23:11
   │
23 │     cache.touch()
   │           ^^^^^ `T` doesn't implement `Hashable`

error[6-0003]: trait bound is not satisfied
   ┌─ inherent_impl_ill_formed_receiver.fe:27:27
   │
27 │     let cache: Cache<T> = todo()
   │                           ^^^^^^ `T` doesn't implement `Hashable`

error[6-0003]: trait bound is not satisfied
   ┌─ inherent_impl_ill_formed_receiver.fe:28:11
   │
13 │ impl<T: Hashable> Cache<T> {
   │         -------- required by this bound on `touch`
   ·
28 │     cache.touch()
   │           ^^^^^ `T` doesn't implement `Hashable`

error[6-0003]: trait bound is not satisfied
   ┌─ inherent_impl_ill_formed_receiver.fe:28:11
   │
28 │     cache.touch()
   │           ^^^^^ `T` doesn't implement `Hashable`
